# nu_plugin_http

./: Cargo.toml  README.md  run.nu
src/: bridge.rs  lib.rs  main.rs  plugin.rs  traits.rs
src/commands/: get.rs  mod.rs  request.rs  serve.rs
