[package]
name = "nu_plugin_http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nu-plugin = "0.92.2"
nu-protocol = "0.92.2"
reqwest = { version = "0.12.4", features = ["blocking"] }
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
hyper = { version = "1.3.1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
bytes = "1.6.0"
http-body-util = "0.1.1"
