[package]
name = "nu_plugin_http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
hyper = { version = "1.3.1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
bytes = "1.6.0"
http = "1.1.0"
http-body-util = "0.1.1"
tokio-stream = "0.1.15"
http-body = "1.0.0"

# nu-plugin = "0.94.2"
# nu-protocol = "0.94.2"

nu-plugin = { path = "/Users/andy/.s/sessions/03B73LNTW7UJJP1EWGDQMZNH3/nushell/crates/nu-plugin"}
nu-protocol = { path = "/Users/andy/.s/sessions/03B73LNTW7UJJP1EWGDQMZNH3/nushell/crates/nu-protocol"}

